# unclock-crypto-engineering

./: .gitignore  Cargo.toml  README.md
Homework/: 2022-11-25 Week 2 Notes.md  README.md
Homework/2022-11-25/: 2022-11-18 Session 1 Notes.md  exercises.md
Homework/2022-11-25/stats/: 32early.cbor  32late.cbor  abc26-early.cbor  abc26-late.cbor  mod_add_early.cbor  mod_add_late.cbor  timing_analysis.ipynb  timing_analysis.py
Homework/2022-11-25/vigenere/: Cargo.toml  criterion.toml
Homework/2022-11-25/vigenere/benches/: fib_benchmark.rs  key_abc32.rs  key_benchmarks.rs  mod_add_bench.rs
Homework/2022-11-25/vigenere/src/: lib.rs
Homework/2022-11-25/xts/: Cargo.toml
Homework/2022-11-25/xts/src/: lib.rs
Homework/2022-12-02/: ex3-8.sh  excercises.md  exercises.md
Homework/2022-12-02/des_ex/: Cargo.toml
Homework/2022-12-02/des_ex/src/: main.rs
Homework/2022-12-02/exercises/: Cargo.toml
Homework/2022-12-02/exercises/src/: des_comp.rs  main.rs  padding.rs
Homework/2022-12-02/xor/: Cargo.toml
Homework/2022-12-02/xor/src/: main.rs
Homework/2022-12-09/: k_comp.py  solutions.md
Homework/2022-12-09/hw3/: Cargo.toml
Homework/2022-12-09/hw3/benches/: collision_search.rs  pre_image_search.rs  which_hash.rs
Homework/2022-12-09/hw3/src/: ex5_3.rs  ex5_4.rs  lib.rs
Homework/OTP Notes/: info-updates.tex
