[package]
name = "exercises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.66"
cbc = "0.1.2"
crypto = "0.4.0"
crypto-common = "0.1.6"
des = "0.8.1"
hex = "0.4.3"
hex-literal = "0.3.4"
rand = "0.8.5"
thiserror = "1.0.37"
