[package]
name = "hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-common = "0.1.6"
hex-literal = "0.3.4"
radix_trie = "0.2.1"
rand = "0.8.5"
sha2 = "0.10.6"
trie-rs = "0.1.1"

[dev-dependencies]
criterion = "0.4"


[[bench]]
name = "pre_image_search"
harness = false

[[bench]]
name = "collision_search"
harness = false
