[package]
name = "hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = {version = "1.3", features = ["traits-preview"]}
digest = "0.10.6"
hex-literal = "0.3.4"
rand = "0.8.5"
sha2 = "0.10.6"

[dev-dependencies]
criterion = "0.4"


[[bench]]
name = "pre_image_search"
harness = false

[[bench]]
name = "which_hash"
harness = false

[[bench]]
name = "collision_search"
harness = false
